2010-09-30	Evgeny V. Kokovikhin
	* core/Cache/Memcached.class.php: ability to set TimeOut added.
	Thanks to Alexander A. Klestov.


2010-09-23	Sergey S. Sergeev

	* core/OSQL/FromTable.class.php: fixed no brackets for SQLChain with
	size = 1 in SELECT FROM statements.

2010-07-28	Evgeny V. Kokovikhin

	* core/Base/Assert.class.php: checkScalar() added.
	* core/Form/Primitives/PrimitiveIdentifierList.class.php:
	optional ability to ignore empty values added

2010-06-30	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveFile.class.php:
	{is,enable,disable}CheckUploaded methods added.

2010-06-26	Sergey S. Sergeev

	* core/OSQL/DBTable.class.php: setName() added.

	* test/main/OsqlReturningTest.class.php: typo fixed.

	* meta/classes/MetaClassProperty.class.php: fixed support for identifiers
	of string type. Thanks to Alexander V. Solomatin (aka Lom).

2010-05-25	Evgeny V. Kokovikhin

	* core/Cache/SimpleAggregateCache.class.php: new implementation of Aggregate
	cache - simple selective peer algorithm.

	* test/core/CacheTest.class.php: test updated.

2010-04-23	Evgeny V. Kokovikhin

	* core/Base/Date.class.php: fix week of year defenition. Week 01 of a year is
	per definition the first week that has the Thursday in this year. Thanks to
	Alexander A. Klestov.

2010-04-15	Evgeny N. Sokolov

	* main/Net/Http/CurlHttpCLient.class.php: ability post array HttpRequest vars.

2010-04-09	Evgeny V. Kokovikhin

	* core/Base/Timestamp.class.php: getHourStartStamp method added.

2010-03-23	Evgeny V. Kokovikhin

	* core/Form/Primitives/PrimitiveInet.class.php: right check for ip. Thanks to
	Timofey Anisimov.

2010-03-15	Evgeny V. Kokovikhin

	* main/Markup/Feed/YandexRssFeedFormat.class.php,
	main/Markup/Feed/YandexRssFeedItem.class.php,
	main/Markup/Feed/YandexRssItemWorker.class.php,
	main/Markup/Feed/FeedItem.class.php, main/Markup/Feed/FeedReader.class.php:
	yandex rss format supports added.  For details see